# theterminal

./: .contemporary.json  .parlance.json  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  about.ui  dropdown.cpp  dropdown.h  dropdown.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nativeeventfilter.cpp  nativeeventfilter.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  terminalwidget.cpp  terminalwidget.h  theTerminal.pro  theterminal.desktop  theterminal.pro  travis.sh
.github/workflows/: macos.yml
terminal/: CMakeLists.txt  about.cpp  about.ui  com.vicr123.theterminal-blueprint.desktop  com.vicr123.theterminal.desktop  com.vicr123.theterminal.dropdown.desktop  com.vicr123.theterminal_blueprint.desktop  commandpart.cpp  commandpart.h  commandpart.ui  common.cpp  common.h  dropdown.cpp  dropdown.h  dropdown.ui  history.cpp  history.h  icon-bp.icns  icon.icns  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nativeeventfilter.cpp  nativeeventfilter.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  terminal.pro  terminalcontroller.cpp  terminalcontroller.h  terminalpart.cpp  terminalpart.h  terminalstatus.cpp  terminalstatus.h  terminalstatus.ui  terminaltabber.cpp  terminaltabber.h  terminaltabber.ui  (+7 more)
terminal/dialogs/: busydialog.cpp  busydialog.h  busydialog.ui  remoteconnectionpopover.cpp  remoteconnectionpopover.h  remoteconnectionpopover.ui
terminal/graphicalParts/: lscommand.cpp  lscommand.h  lscommand.ui  ttedcommand.cpp  ttedcommand.h  ttedcommand.ui
terminal/models/: colorschemeselectiondelegate.cpp  colorschemeselectiondelegate.h
terminal/print/: printcontroller.cpp  printcontroller.h
terminal/settingspanes/: activeterminalbellssettingspane.cpp  activeterminalbellssettingspane.h  activeterminalbellssettingspane.ui  colourssettingspane.cpp  colourssettingspane.h  colourssettingspane.ui  dropdownterminalkeyboardbindingsettingspane.cpp  dropdownterminalkeyboardbindingsettingspane.h  dropdownterminalkeyboardbindingsettingspane.ui  inactiveterminalbellssettingspane.cpp  inactiveterminalbellssettingspane.h  inactiveterminalbellssettingspane.ui  scrollbacksettingspane.cpp  scrollbacksettingspane.h  scrollbacksettingspane.ui  scrollingdownsettingspane.cpp  scrollingdownsettingspane.h  scrollingdownsettingspane.ui  shellsettingspane.cpp  shellsettingspane.h  shellsettingspane.ui  textsettingspane.cpp  textsettingspane.h  textsettingspane.ui
terminal/translations/: aa_DJ.ts  aa_ET.ts  am_ET.ts  ar_DZ.ts  ar_IQ.ts  ar_JO.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_LY.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_QA.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TD.ts  ar_TN.ts  as_IN.ts  az_AZ.ts  bg_BG.ts  bn_BD.ts  bs_BA.ts  cr_CA.ts  de_DE.ts  dz_BT.ts  en_AU.ts  en_CA.ts  en_GB.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_GT.ts  es_NI.ts  es_PA.ts  es_PE.ts  es_SV.ts  (+61 more)
terminal/translations/desktop/com.vicr123.theterminal/: en.json
terminal/translations/desktop/com.vicr123.theterminal.dropdown/: en.json
terminal/translations/desktop/com.vicr123.theterminal_blueprint/: en.json
untitled/: untitled.h  untitled.pro
